# pin-it-bot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml  release.yaml
src/: main.rs
